--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
           <div class="row experience-item align-items-stretch">
             <div class="col-lg-6">
               <i class="ri-terminal-window-line"></i>
-              <h6>Nov 2018 - 2019</h6>
-              <h4>Senior Professional</h4>
+              <h6>Nov 2018 - Currrent</h6>
+              <h4>Senior Manager</h4>
             </div>
             <div class="col-lg-6">
               <p>
-                Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc
-                vel
-                risus commodo viverra maecenas accumsan.
+                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
+                gravida.
+                Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
               </p>
             </div>
           </div>
