updated experience and expertise details

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           <h2 class="name-headline" style="font-size: 0px;"><span style="font-size: 40px;color:var(--liteColor); font-weight: 500;">Hi, I am</span><br/><span style="font-size: 45px;">Madhuprasad Ramalingam.</span>
           <br/>
           <span class="position">Techno-Functional Expert</span>
-          <span class="position">Systems Migartion Expert</span>
-          <span class="position">Lending Expert</span>
+          <span class="position">Systems Migration Expert</span>
+          <span class="position">Design Strategist</span>
         </h2>
           <p>An ambitious performance driven professional with 15+ years of experience in Banking, NBFC, Mutual Funds, Retail and Healthcare businesses.</p>
           <p> Let's create something extraordinary!</p>
@@ -125,25 +125,23 @@
             <div class="icon"><i class="ri-bank-line" style="color: #353ae0;"></i>
             </div>
             <h4 class="title"><a href="">Banking and Non-Banking finance</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <p class="description">15+ years of industry experience with 12+ years in the BFSI domain with specialization in managing lending, Bank and NBFC's supporting financial solutions.</p>
           </div>
         </div>
-
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
           <div class="icon-box">
             <div class="icon"><i class="ri-funds-line" style="color: #d935dc;"></i>
             </div>
             <h4 class="title"><a href="">Mutual funds</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <p class="description">Implemented CRM, 360&deg; AMC operation solution called BOSS (Branch Operating Services System),Brokerage systems for Asset Manufacturing company.</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
           <div class="icon-box">
             <div class="icon"><i class="ri-hospital-line" style="color: #ff7907"></i></div>
-            <h4 class="title"><a href="">Healthcare</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-
+            <h4 class="title"><a href="">Techno-Functional Expert</a></h4>
+            <p class="description">Strong experience in business automation, Project Management, Quality Management, Maximized customer satisfaction with Process compliance.</p>
           </div>
         </div>
 
@@ -151,21 +149,21 @@
           <div class="icon-box">
             <div class="icon"><i class="ri-magic-line" style="color:#76a728;"></i></div>
             <h4 class="title"><a href="">Process Automation</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <p class="description">Proven success in process automation, improved processes and program management across domains. Guide teams throughout project life cycle, applying advanced communication, training, and mentoring skills.</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
           <div class="icon-box">
             <div class="icon"><i class="ri-ball-pen-line" style="color:teal"></i></div>
             <h4 class="title"><a href="">Compliance and Regulations</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <p class="description">Strong background in quality assurance defining, implementing, and monitoring processes and performance measures in company operations with regulatory cum statutory audits in NBFc's.</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
           <div class="icon-box">
             <div class="icon"><i class="ri-scan-2-line" style="color:steelblue"></i></div>
             <h4 class="title"><a href="">Talent management</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <p class="description">10+ years of experience with customer-focused mind-set to achieve timely delivery of high-quality products, services, and support. Proven track record of surpassing business goals by ensuring optimal utilization of teams, processes, technology. </p>
           </div>
         </div>
 
@@ -181,27 +179,37 @@
           <div class="section-title aos-init aos-animate">
             <h6 class="text-left">Working with</h6>
             <h2 class="text-left">Experience</h2>
-            <p class="text-justify">Happy to connect for providing support for betterment of your business. Feelfree to
-              connect with me for any solutioning and planning help on systemsfor an effective operation of your
+            <p class="text-justify">Happy to connect for providing support for betterment of your business. Feel free to
+              connect with me for any solutioning and planning help on systems for an effective operation of your
               business in financial, lending, banking,retail and healthcare domain.<br>
               <a href="#" class="btn-get-started-solid">More about me<i class="ri-download-line"></i></a>
             </p>
           </div>
         </div>
-
-
         <div class="col-md-8">
           <div class="row experience-item align-items-stretch">
             <div class="col-lg-6">
               <i class="ri-terminal-window-line"></i>
-              <h6>Nov 2018 - Currrent</h6>
+              <h6>FEB 2019 - Current</h6>
               <h4>Senior Manager</h4>
             </div>
             <div class="col-lg-6">
               <p>
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
-                gravida.
-                Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                As a primary working member of PetroMoney Fintech (A Unit of Green Malabar Finance Ventures Limited) set up the Technology & Operations of this fintech. 
+              </p>
+            </div>
+          </div>
+          <!-- End Experience Item-->
+
+          <div class="row experience-item align-items-stretch">
+            <div class="col-lg-6">
+              <i class="ri-terminal-window-line"></i>
+              <h6>NOV 2017 To JAN 2019</h6>
+              <h4>Senior Manager</h4>
+            </div>
+            <div class="col-lg-6">
+              <p>
+                Provided Strategic direction on cost reduction and performance optimisation initiatives.
               </p>
             </div>
           </div>
@@ -210,28 +218,24 @@
           <div class="row experience-item d-flex align-items-stretch">
             <div class="col-lg-6">
               <i class="ri-a-b"></i>
-              <h6>Apr 2017 - May 2018</h6>
+              <h6>APR 2017 To OCT 2019</h6>
               <h4>Associate Tech Lead</h4>
             </div>
             <div class="col-lg-6">
               <p>
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
-                gravida.
-                Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                Worked in Encore Theme Private Limited, in this role for a period of 2 years designed and deployed lending solutions like Leads, LOS, LMS, Accounting Systems to various NBFCs (Almost all kind of loan products in the industry)
               </p>
             </div>
           </div><!-- End Experience Item-->
           <div class="row experience-item d-flex align-items-stretch">
             <div class="col-lg-6">
               <i class="ri-drag-drop-line"></i>
-              <h6>May 2010 - Mar 2017</h6>
+              <h6>MAY 2010 - MAR 2017</h6>
               <h4>Assistant Manager</h4>
             </div>
             <div class="col-lg-6">
               <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                donec
-                ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium.
+                Worked in Procon Systems Private Limited, in this role for a period of 7 years designed, deployed, and provide support to the software’s, in various portfolios like AMC, NBFC, Bank, Alternatives, and Securities.
               </p>
             </div>
           </div>
@@ -244,9 +248,7 @@
             </div>
             <div class="col-lg-6">
               <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                donec
-                ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium.
+                Worked in Lason India Private Limited, in this role responsible high quality(99.95%) ANSI output delivery for larger amount of claims in short span of time as per SLA with international clients. 
               </p>
             </div>
           </div>
