updated numbers game section in profile

--- a/index.html
+++ b/index.html
@@ -257,6 +257,60 @@
       </div>
     </div>
   </section><!-- End Experience Section -->
+
+
+    <!-- ======= My Numbers ======= -->
+    <section id="we-do" class="d-flex align-items-center">
+      <div class="container position-relative aos-init aos-animate">
+        <div class="section-title">
+          <h6>Number game</h6>
+          <h2>Experience in numbers</h2>
+        </div>
+        <div class="row icon-boxes">
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
+            <div class="icon-box">
+              <h1><a href="">15</a></h1>
+              <p class="description">Years of corporate experience</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
+            <div class="icon-box">
+              <h1><a href="">45</a></h1>
+              <p class="description">People managed</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
+            <div class="icon-box">
+              <h1><a href="">40+</a></h1>
+              <p class="description">Projects managed</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row icon-boxes">
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
+            <div class="icon-box">
+              <h1><a href="">700+</a></h1>
+              <p class="description">Crores of fund managed</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
+            <div class="icon-box">
+              <h1><a href="">15+</a></h1>
+              <p class="description">Thrid-party service integrations</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate">
+            <div class="icon-box">
+              <h1><a href="">11+</a></h1>
+              <p class="description">Brand collaborations across various domains</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
   <section id="footer">
   <footer id="footer ">
     <div class="container">
@@ -272,9 +326,9 @@
             <div class="info">
               <h6 class="text-left" style="margin-bottom:30px">Connect with me</h6>
               <div class="social-links" >
-                <a href="https://www.facebook.com" target="_blank" class="facebook" style="font-size:32px;color: var(--lightColorMedium); margin-right:8px;"> <i class=" ri-facebook-line"></i></a>
+                <a href="https://www.facebook.com/madhuprasad.ramalingam" target="_blank" class="facebook" style="font-size:32px;color: var(--lightColorMedium); margin-right:8px;"> <i class=" ri-facebook-line"></i></a>
                 <!-- <a href="https://www.instagram.com" target="_blank" class="instagram" style="font-size:32px;color: var(--lightColorMedium); margin-right:8px;"> <i class=" ri-instagram-line"></i></a> -->
-                <a href="https://www.linkedin.com" target="_blank" class="linkedin" style="font-size:32px;color: var(--lightColorMedium);"> <i class=" ri-linkedin-box-line"></i></a>
+                <a href="https://www.linkedin.com/in/madhuprasadr/" target="_blank" class="linkedin" style="font-size:32px;color: var(--lightColorMedium);"> <i class=" ri-linkedin-box-line"></i></a>
               </div>
             </div>
           </div>
