--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       <div class="row d-flex align-items-center copyright-line">
         <div class="col-lg-6 text-lg-left text-center ">
           <div class="copyright ">
-            &copy; <strong>Pentafox Technologies.</strong>  2020.
+            &copy; <strong>Madhuprasad.</strong>  2020.
             All Rights Reserved.
           </div>
         </div>
