Updated job titles

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="col-lg-6">
               <i class="ri-terminal-window-line"></i>
               <h6>FEB 2019 - Current</h6>
-              <h4>Senior Manager</h4>
+              <h4>Head, IT</h4>
             </div>
             <div class="col-lg-6">
               <p>
@@ -205,7 +205,7 @@
             <div class="col-lg-6">
               <i class="ri-terminal-window-line"></i>
               <h6>NOV 2017 To JAN 2019</h6>
-              <h4>Senior Manager</h4>
+              <h4>Senior Professional</h4>
             </div>
             <div class="col-lg-6">
               <p>
