Profile added and dates corrected

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <p class="text-justify">Happy to connect for providing support for betterment of your business. Feel free to
               connect with me for any solutioning and planning help on systems for an effective operation of your
               business in financial, lending, banking,retail and healthcare domain.<br>
-              <a href="#" class="btn-get-started-solid">More about me<i class="ri-download-line"></i></a>
+              <a href="./assets/docs/profile.pdf" class="btn-get-started-solid">More about me<i class="ri-download-line"></i></a>
             </p>
           </div>
         </div>
@@ -204,7 +204,7 @@
           <div class="row experience-item align-items-stretch">
             <div class="col-lg-6">
               <i class="ri-terminal-window-line"></i>
-              <h6>NOV 2017 To JAN 2019</h6>
+              <h6>NOV 2018 To JAN 2019</h6>
               <h4>Senior Professional</h4>
             </div>
             <div class="col-lg-6">
@@ -218,7 +218,7 @@
           <div class="row experience-item d-flex align-items-stretch">
             <div class="col-lg-6">
               <i class="ri-a-b"></i>
-              <h6>APR 2017 To OCT 2019</h6>
+              <h6>APR 2017 To OCT 2018</h6>
               <h4>Associate Tech Lead</h4>
             </div>
             <div class="col-lg-6">
